--- a/rompecabezas/css/juego.css
+++ b/rompecabezas/css/juego.css
@@ -37,7 +37,8 @@ li::before {
 
 .col-60 {
   background: #E84A5F;
-
+  height: 600px;
+  width: 600px;
 }
 
 #flecha{
@@ -49,11 +50,23 @@ li::before {
 }
 
 #juego div {
-  text-align: center;
+  text-align: left;
   animation: fadein 2s;
 }
 
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
+}
+
+.estilado {
+  height: 200px;
+  width: 200px;
+  float: left;
+  display: block;
+}
+
+.texto-centrado img {
+  width: 150px;
+  height: 150px;
 }
