--- a/rompecabezas/css/juego.css
+++ b/rompecabezas/css/juego.css
@@ -6,14 +6,17 @@ body {
   min-height: 100%;
   background-image: url(../images/adventure.jpg);
 }
+
 ul {
   padding-left: 0;
   list-style: none;
 }
+
 li {
   padding: 5px 0;
   animation: fadein 5s;
 }
+
 li::before {
   content: "• ";
   color: #EC6778;
@@ -21,7 +24,7 @@ li::before {
 
 .col-40 h1 {
   font-size: 20px;
-  color: #E84A5F;
+  color: #F38181;
 }
 
 .col-40, .col-60 {
@@ -29,14 +32,15 @@ li::before {
   margin: 0;
   vertical-align: top;
 }
+
 .col-40 {
-  background: #FFF;
+  background-color: #FCE38A;
   padding: 30px;
-  color: #000;
+  color: #F3ADAD;
 }
 
 .col-60 {
-  background: #E84A5F;
+  background: #EAFFD0;
   height: 600px;
   width: 600px;
 }
@@ -60,10 +64,11 @@ li::before {
 }
 
 .estilado {
-  height: 200px;
-  width: 200px;
+  height: 198px;
+  width: 198px;
   float: left;
   display: block;
+  border: 1px solid #95E1D3;
 }
 
 .texto-centrado img {
