--- a/rompecabezas/css/juego.css
+++ b/rompecabezas/css/juego.css
@@ -75,3 +75,16 @@ li::before {
   width: 150px;
   height: 150px;
 }
+
+#footer {
+  padding: 10px 0;
+  text-align: center;
+  font-style: italic;
+  color: #FFF;
+  background-color: #EC6778;
+}
+
+.estilado img{
+  height: 100%;
+  width: 100%;
+}
